--- a/src/app/modules/commons/users/signup/signupDone.html
+++ b/src/app/modules/commons/users/signup/signupDone.html
@@ -9,7 +9,7 @@
                 <div class="col s12">
                     <div class="center icon-block">
                          <div class="red-text text-lighten-1">
-                             <i class="medium material-icons">insert_emoticon</i>
+                             <i class="medium material-icons">verified_user</i>
                          </div>
                         <h5 class="center" translate="endPage.title"></h5>
                     </div>
