--- a/src/app/modules/test/admin/adminUser.html
+++ b/src/app/modules/test/admin/adminUser.html
@@ -161,7 +161,7 @@
 						<div class="col s6">activity.code</div><div class="col s6">: {{currentPlan.activity.code}}</div>
 						<div class="col s6">activity.label</div><div class="col s6">: {{currentPlan.activity.label}}</div>
 						<div class="col s6">activity.enable</div><div class="col s6">: {{currentPlan.activity.enable}}</div>
-						<div class="col s6">activity.activityType</div><div class="col s6">: {{currentPlan.activity.activiyType}}</div>
+						<div class="col s6">activity.activityType</div><div class="col s6">: {{currentPlan.activity.activityType}}</div>
 					</div>
 				</div>
 			</div>
