Récupération du pays et code postal liés à la ville du club pour améliorer rech structure + création structure

--- a/src/app/modules/test/admin/adminUser.html
+++ b/src/app/modules/test/admin/adminUser.html
@@ -351,7 +351,7 @@
 					<div class="col s3">nationality</div><div class="col s9">: {{person.nationality}}</div>
 				</div>
 				<div class="col s4 card-panel">
-					<div class="col s3">formated-Address</div><div class="col s9">: {{person.address.formatedAddress}}</div>
+					<div class="col s3">formatedAdd</div><div class="col s9">: {{person.address.formatedAddress}}</div>
 					<div class="col s3">lat</div><div class="col s9">: {{person.address.lat}}</div>
 					<div class="col s3">lng</div><div class="col s9">: {{person.address.lng}}</div>
 					<div class="col s3">place</div><div class="col s9">: {{person.address.place}}</div>
