--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -182,8 +182,19 @@
                             <label>{{'structureSection.label.userStructureCity' | translate }} <span class="red-text text-lighten-1">*</span></label>
                        </div>
                         <div class="input-field col s3">
-                            <input type="text" id="userStructureCity" ng-autocomplete ng-model="structureCity" details="signup.detailsStructureCity" placeholder="" ng-change="changeCityName();" ng-blur="resetStructure();" />
+                            <input type="text" id="userStructureCity" ng-autocomplete ng-model="structureCity" details="signup.detailsStructureCity" options="optionsStructureCity" placeholder="" ng-change="changeCityName();" ng-blur="resetStructure();" />
                             <label for="userStructureCity">{{'structureSection.label.userStructureCity' | translate }}</label>
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col s3">
+                            <label>{{'structureSection.label.userZipcode' | translate }}</label>
+                       </div>
+                        <div class="input-field col s3">
+                            {{temp.zipcode}}
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -195,15 +206,66 @@
                        </div>
                         <div class="input-field col s3">
                             <select name="userStructureSelect" ng-model="structure" id="userStructureSelect" class="browser-default blue-grey-text text-darken-1" ng-focus="loadStructures()"
-                            	ng-options="struct.labelAddress as (struct.label + struct.address) for struct in valuesStructures | orderBy:'label' track by struct._id" ng-focus="resetStructure();" ng-change="applyChangeStructure()" ng-blur="applyChangeStructure()">
+                            	ng-options="struct.labelAddress as (struct.label + struct.address) for struct in valuesStructures track by struct._id" ng-focus="resetStructure();" ng-change="applyChangeStructure()" ng-blur="applyChangeStructure()">
                             </select>
                             <input type="hidden" ng-model="structure.referencialId" value="-1" />
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
                     
+                    <div class="row" ng-hide="temp.createStructure">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col m6 s12">
+                            <label>Club choisi</label>
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
                     
-                     <!-- actions buttons -->
+                    <div class="row" ng-hide="temp.createStructure">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="col m3 s6"><label>Nom :</label></div>
+                        <div class="col m3 s6">{{temp.structure.label}}&nbsp;</div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="col m3 s6"><label>Adresse :</label></div>
+                        <div class="col m3 s6">{{temp.structure.address.place}}&nbsp;</div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="col m3 s6"><label>Ville :</label></div>
+                        <div class="col m3 s6">{{temp.structure.address.zipcode}} {{temp.structure.address.city}}&nbsp;</div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
+                    <div class="row" ng-show="temp.createStructure">
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col m6 s12">
+                            <label>Club à créer</label>
+                        </div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
+                    <div class="row" ng-show="temp.createStructure">
+                    	<div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col m3 s6"><label>Nom :</label></div>
+                        <div class="input-field col m3 s6"><input type="text" id="userStructureLabel" class="validate" ng-model="newStructure.label"></div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    <div class="row" ng-show="temp.createStructure">    
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col m3 s6"><label>Adresse :</label></div>
+                        <div class="input-field col m3 s6"><input type="text" id="userStructurePlace" class="validate" ng-model="newStructure.address.place"></div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    <div class="row" ng-show="temp.createStructure">    
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                        <div class="input-field col m3 s6"><label>Ville :</label></div>
+                        <div class="input-field col m3 s6">{{temp.structure.address.zipcode}} {{temp.structure.address.city}}&nbsp;</div>
+                        <div class="col m3 hide-on-med-and-down">&nbsp;</div>
+                    </div>
+                    
+                    <!-- actions buttons -->
                     <div class="row">&nbsp;</div>
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
@@ -245,6 +307,11 @@
 							     {{data.address.place}}<br>
 							     {{data.address.zipcode}} {{data.address.city}}
 							</div> 
+                        </div>
+                        <div class="input-field col s5">
+						     {{structure.label}}<br>
+						     {{structure.address.place}}<br>
+						     {{structure.address.zipcode}} {{structure.address.city}}
                         </div>
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                     </div>
