mise en place du captcha qui est un peu utile des fois...

--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -215,6 +215,9 @@
                            class="validate" ng-model="passwdConfirm" required>
                     <label for="password">{{'content.signup.label.passwordConfirm' | translate }}</label>
                 </div>
+                <div class="input-field col s6">
+                	<div re-captcha ng-model="signup.captcha"></div>
+                </div>
             </div>
         </div>
 
