--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -64,7 +64,7 @@
                 <div class="row">
                     <h6 class="red-text text-lighten-1 col s12">{{'eventLabels.SectionActors' | translate }}</h6>
                     <div class="input-field col s10 m5">
-                        <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" id="team">
+                        <select class="browser-default blue-grey-text text-darken-1" ng-model="teamId" id="team" ng-change="changeTeamHome()">
                             <option value="" disabled selected>{{'eventLabels.Team' | translate }}</option>
                             <option ng-repeat="p in listTeamHome" value="{{p._id}}">{{p.label}}</option>
                         </select>
