--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -186,27 +186,20 @@
                     <li class="col m3 s12" ng-repeat="team in listTeamAdversary">
                         <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===true">
                             <div class="card-content light-green lighten-1 white-text center">
-                                <span class="card-title samll">{{team.label}}</span>
+                                <span class="card-title"><h5 class="small">{{team.label}}</h5></span>
                             </div>
                             <div class="card-content">
-                                <p>{{'effectiveLabels.effectiveTeamEnable' | translate }}</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="#/private/updateTeam/{{team._id}}" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
-                                <a href="#/private/teamStats/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                                <p><a href="#/private/updateTeam/{{team._id}}/true" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a> {{'effectiveLabels.effectiveTeamEnable' | translate }}</p>
+                                
                             </div>
                         </div>
                         <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===false">
                             <div class="card-content grey lighten-2 blue-grey-text text-darken-2 center">
-                                <span class="card-title">{{team.label}}</span>
+                                <span class="card-title"><h5 class="small">{{team.label}}</h5></span>
                             </div>
                             <div class="card-content">
-                                <p>{{'effectiveLabels.effectiveTeamNotEnable' | translate }}</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="#/private/updateTeam/{{team._id}}" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
-                                <a href="#/private/updateTeam/{{team._id}}/false" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
-                                <a href="#/private/teamStats/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                                <p><a href="#/private/updateTeam/{{team._id}}/true" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a> {{'effectiveLabels.effectiveTeamEnable' | translate }}</p>
+                                
                             </div>
                         </div>
                     </li>
