--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -48,7 +48,7 @@
             </a>
         </div>
         <div class="col s8 center" ng-if="periodicity=='month'">
-            <h6 class="red-text text-lighten-1">{{periodicityActive.label}}</h6>
+            <h6 class="red-text text-lighten-1">{{activePeriod.label}}</h6>
         </div>
         <div class="col s2 center" ng-if="periodicity=='month'">
             <a href="" ng-click="nextMonth()" class="btn-floating red lighten-1 right white-text">
@@ -63,7 +63,7 @@
             </a>
         </div>
         <div class="col s8 center" ng-if="periodicity=='quarter'">
-            <h6 class="red-text text-lighten-1">{{periodicityActive.label}}</h6>
+            <h6 class="red-text text-lighten-1">{{activePeriod.label}}</h6>
         </div>
         <div class="col s2 center" ng-if="periodicity=='quarter'">
             <a href="" ng-click="nextQuarter()" class="btn-floating red lighten-1 right white-text">
@@ -78,7 +78,7 @@
             </a>
         </div>
         <div class="col s8 center" ng-if="periodicity=='season'">
-            <h6 class="red-text text-lighten-1">{{periodicityActive.label}}</h6>
+            <h6 class="red-text text-lighten-1">{{activePeriod.label}}</h6>
         </div>
         <div class="col s2 center" ng-if="periodicity=='season'">
             <a href="" ng-click="nextSeason()" class="btn-floating red lighten-1 right white-text">
@@ -142,7 +142,7 @@
             </a>
         </div>
         <div class="col s10 center" ng-if="periodicity=='month'">
-            <h5 class="red-text text-lighten-1">{{periodicityActive.label}}</h5>
+            <h5 class="red-text text-lighten-1">{{activePeriod.label}}</h5>
         </div>
         <div class="col s1 center" ng-if="periodicity=='month'">
             <a href="" ng-click="nextMonth()" class="btn-floating red lighten-1 right white-text">
@@ -157,7 +157,7 @@
             </a>
         </div>
         <div class="col s10 center" ng-if="periodicity=='quarter'">
-            <h5 class="red-text text-lighten-1">{{periodicityActive.label}}</h5>
+            <h5 class="red-text text-lighten-1">{{activePeriod.label}}</h5>
         </div>
         <div class="col s1 center" ng-if="periodicity=='quarter'">
             <a href="" ng-click="nextQuarter()" class="btn-floating red lighten-1 right white-text">
@@ -172,7 +172,7 @@
             </a>
         </div>
         <div class="col s10 center" ng-if="periodicity=='season'">
-            <h5 class="red-text text-lighten-1">{{periodicityActive.label}}</h5>
+            <h5 class="red-text text-lighten-1">{{activePeriod.label}}</h5>
         </div>
         <div class="col s1 center" ng-if="periodicity=='season'">
             <a href="" ng-click="nextSeason()" class="btn-floating red lighten-1 right white-text">
